구글로그인 기능 추가 (로컬회원가입, 로그인 기능 숨김)

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,8 @@ app.*.map.json
 # Firebase configuration files (보안상 민감)
 ios/Runner/GoogleService-Info.plist
 android/app/google-services.json
+firebase.json
+lib/firebase_options.dart
 
 # Keystore files
 *.keystore
