--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ dependencies:
   google_sign_in: ^6.1.6
   flutter_svg: ^2.0.9
   flutter_signin_button: ^2.0.0
+  
+  # Firebase dependencies
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  
+  # HTTP client
+  dio: ^5.4.0
 
 dev_dependencies:
   flutter_test:
