--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/images/
+    - assets/images/출발지.png
+    - assets/images/도착지.png
+    - assets/images/카메라.png
+    - assets/images/보안등.png
+    - assets/images/편의점.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
